<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:src="@drawable/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/image_margin_top"
        android:translationZ="100dp"
        />

    <ImageView
        android:id="@+id/iv_cloud"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:scaleType="fitXY"
        android:src="@drawable/clouds"
        app:layout_constraintTop_toBottomOf="@id/iv_welcome"
        app:layout_constraintBottom_toBottomOf="@id/iv_welcome"
        />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_ready_to_travel"
        android:textSize="40dp"
        android:textColor="#ff160922"
        android:translationZ="100dp"
        android:fontFamily="@font/chivo_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_cloud"
        android:layout_marginTop="100dp"
        android:layout_marginStart="@dimen/margin_left"/>

    <TextView
        android:id="@+id/tv_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chivo_regular"
        android:text="@string/sign_up_with_facebook_with_the_most_fulfilling_trip_planning_experience_with_us"
        android:textColor="@color/blackColor"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintStart_toStartOf="@id/tv_welcome"
        android:layout_marginTop="@dimen/margin_top"/>

    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/log_in_with_facebook"
        android:background="@drawable/button_background"
        android:fontFamily="@font/chivo_regular"
        android:drawableRight="@drawable/facebook"
        android:drawablePadding="@dimen/drawable_padding"
        app:layout_constraintTop_toBottomOf="@id/tv_body"
        app:layout_constraintStart_toStartOf="@id/tv_body"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"/>

    <Button
        android:id="@+id/btn_email"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/log_in_with_email_address"
        android:background="@drawable/button_background"
        android:fontFamily="@font/chivo_regular"
        app:layout_constraintTop_toBottomOf="@id/btn_facebook"
        app:layout_constraintStart_toStartOf="@id/tv_body"
        app:layout_constraintEnd_toEndOf="@id/btn_facebook"
        android:layout_marginTop="@dimen/margin_top"/>

    <Button
        android:id="@+id/btn_new_account"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="Create a new account"
        android:background="@drawable/button_create_account_background"
        android:fontFamily="@font/chivo_regular"
        app:layout_constraintTop_toBottomOf="@id/btn_email"
        app:layout_constraintStart_toStartOf="@id/tv_body"
        app:layout_constraintEnd_toEndOf="@id/btn_facebook"
        android:layout_marginTop="@dimen/margin_top"/>

</androidx.constraintlayout.widget.ConstraintLayout>