<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/image_margin_top"
            android:translationZ="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/almost_there"
            android:textSize="@dimen/value_text_size"
            android:fontFamily="@font/chivo_bold"
            android:textColor="@color/blackColor"
            app:layout_constraintTop_toBottomOf="@id/iv_back"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginLeft="@dimen/margin_left"
            android:translationZ="100dp"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tv_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_the_form_below_to_create_nyour_ready_to_travel_account"
            android:textSize="@dimen/value_text_size"
            android:fontFamily="@font/chivo_regular"
            android:textColor="@color/blackColor"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginLeft="@dimen/margin_left"
            android:translationZ="100dp"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tv_mondatory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mondatory"
            android:textSize="@dimen/title_text_size"
            android:fontFamily="@font/chivo_regular"
            android:textColor="#FFA9A9A9"
            android:textStyle="bold"
            android:translationZ="100dp"
            app:layout_constraintTop_toBottomOf="@id/tv_body"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginLeft="@dimen/margin_left"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="20dp"
            />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_title_part"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_mondatory"
            android:background="@color/gray_background_color"
            >

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/iv_guitar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/guitar"
            app:layout_constraintTop_toBottomOf="@id/tv_body"
            app:layout_constraintBottom_toBottomOf="@id/cl_title_part"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="@dimen/title_text_size"
            android:fontFamily="@font/chivo_regular"
            android:textColor="@color/title_text_color"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginLeft="@dimen/margin_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_title_part"
            />

        <EditText
            android:id="@+id/et_firstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Regina"
            android:singleLine="true"
            android:textColor="@color/blackColor"
            android:fontFamily="@font/chivo_regular"
            android:backgroundTint="@color/et_bg_color"
            android:textSize="@dimen/value_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_firstName"
            android:layout_marginEnd="@dimen/margin_left"
            app:layout_constraintTop_toBottomOf="@id/tv_firstName"
            />

        <TextView
            android:id="@+id/tv_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="@dimen/title_text_size"
            android:fontFamily="@font/chivo_regular"
            android:textColor="@color/title_text_color"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginLeft="@dimen/margin_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_firstName"
            />

        <EditText
            android:id="@+id/et_lastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Chan"
            android:singleLine="true"
            android:textColor="@color/blackColor"
            android:fontFamily="@font/chivo_regular"
            android:backgroundTint="@color/et_bg_color"
            android:textSize="@dimen/value_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_firstName"
            android:layout_marginEnd="@dimen/margin_left"
            app:layout_constraintTop_toBottomOf="@id/tv_lastName"
            />

        <TextView
            android:id="@+id/tv_emailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textSize="@dimen/title_text_size"
            android:fontFamily="@font/chivo_regular"
            android:textColor="#FFA9A9A9"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginLeft="@dimen/margin_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_lastName"
            />

        <EditText
            android:id="@+id/et_emailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="regina@codigo.co"
            android:singleLine="true"
            android:textColor="@color/blackColor"
            android:fontFamily="@font/chivo_regular"
            android:backgroundTint="#ffe8e8e8"
            android:textSize="@dimen/value_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_firstName"
            android:layout_marginEnd="@dimen/margin_left"
            app:layout_constraintTop_toBottomOf="@id/tv_emailAddress"
            />

        <TextView
            android:id="@+id/tv_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textSize="@dimen/title_text_size"
            android:fontFamily="@font/chivo_regular"
            android:textColor="#FFA9A9A9"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginLeft="@dimen/margin_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_emailAddress"
            />

        <EditText
            android:id="@+id/et_dob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="DD/MM/YYYY"
            android:drawableEnd="@drawable/dob"
            android:drawablePadding="@dimen/drawable_padding"
            android:singleLine="true"
            android:textColor="@color/blackColor"
            android:fontFamily="@font/chivo_regular"
            android:backgroundTint="#ffe8e8e8"
            android:textSize="@dimen/value_text_size"
            app:layout_constraintStart_toStartOf="@id/tv_firstName"
            android:layout_marginEnd="@dimen/margin_left"
            app:layout_constraintTop_toBottomOf="@id/tv_dob"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/et_dob"
            app:layout_constraintTop_toTopOf="@id/et_dob"
            app:layout_constraintBottom_toBottomOf="@id/et_dob"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin_left"
            android:layout_marginStart="@dimen/value_margin"
            android:background="@drawable/dob_background"
            android:padding="5dp"
            >

            <Button
                android:id="@+id/btn_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_background"
                android:fontFamily="@font/chivo_regular"
                android:textAllCaps="false"
                android:textSize="@dimen/title_text_size"
                android:text="@string/female"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <Button
                android:id="@+id/btn_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray_background_color"
                android:fontFamily="@font/chivo_regular"
                android:textAllCaps="false"
                android:textSize="@dimen/title_text_size"
                android:text="@string/male"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_female"
                android:layout_marginStart="@dimen/value_margin"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_nationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nationality"
            android:textSize="@dimen/title_text_size"
            android:fontFamily="@font/chivo_regular"
            android:textColor="#FFA9A9A9"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginLeft="@dimen/margin_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_dob"
            />

        <EditText
            android:id="@+id/et_nationality"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Singaporean"
            android:singleLine="true"
            android:textColor="@color/blackColor"
            android:fontFamily="@font/chivo_regular"
            android:backgroundTint="#ffe8e8e8"
            android:textSize="@dimen/value_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_firstName"
            android:layout_marginEnd="@dimen/margin_left"
            app:layout_constraintTop_toBottomOf="@id/tv_nationality"
            />

        <TextView
            android:id="@+id/tv_countryOfResident"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_of_residence"
            android:textSize="@dimen/title_text_size"
            android:fontFamily="@font/chivo_regular"
            android:textColor="#FFA9A9A9"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginLeft="@dimen/margin_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_nationality"
            />

        <EditText
            android:id="@+id/et_countryOfResident"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Singapore"
            android:singleLine="true"
            android:textColor="@color/blackColor"
            android:fontFamily="@font/chivo_regular"
            android:backgroundTint="#ffe8e8e8"
            android:textSize="@dimen/value_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_firstName"
            android:layout_marginEnd="@dimen/margin_left"
            app:layout_constraintTop_toBottomOf="@id/tv_countryOfResident"
            />

        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mobile no. (Optional)"
            android:textSize="@dimen/title_text_size"
            android:fontFamily="@font/chivo_regular"
            android:textColor="#FFA9A9A9"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginLeft="@dimen/margin_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_countryOfResident"
            />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="+65   |   8139 9124"
            android:singleLine="true"
            android:textColor="@color/blackColor"
            android:fontFamily="@font/chivo_regular"
            android:backgroundTint="#ffe8e8e8"
            android:textSize="@dimen/value_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_firstName"
            android:layout_marginEnd="@dimen/margin_left"
            app:layout_constraintTop_toBottomOf="@id/tv_mobile"
            />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:background="#FFF5F5F5"
            app:layout_constraintTop_toBottomOf="@id/et_mobile"
            android:layout_marginTop="@dimen/value_margin"/>

        <Button
            android:id="@+id/btn_new_account"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:text="Create a new account"
            android:textSize="@dimen/value_text_size"
            android:background="@drawable/button_create_account_background"
            android:fontFamily="@font/chivo_regular"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintStart_toStartOf="@id/tv_firstName"
            app:layout_constraintEnd_toEndOf="@id/et_firstName"
            android:layout_marginTop="@dimen/margin_top"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>